@@ -1,14 +1,10 @@
 package me.nexo.factories.menu;
 
-import me.nexo.core.NexoCore;
 import me.nexo.core.crossplay.CrossplayUtils;
 import me.nexo.core.menus.NexoMenu;
-import me.nexo.core.user.NexoAPI;
 import me.nexo.core.utils.NexoColor;
 import me.nexo.factories.NexoFactories;
 import me.nexo.factories.core.ActiveFactory;
-import me.nexo.protections.core.ProtectionStone;
-import me.nexo.protections.managers.ClaimManager;
 import net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
@@ -19,11 +15,10 @@ import org.bukkit.inventory.ItemStack;
 
 import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * 🏭 NexoFactories - Interfaz de la Fábrica (Arquitectura Enterprise)
- * Nota: Los menús son instanciados por jugador, NO usan @Singleton.
+ * Rendimiento: Cero Acoplamiento a Protections, Prevención de Dupes (Mutex) y Fragmentación de Stacks.
  */
 public class FactoryMenu extends NexoMenu {
 
@@ -38,7 +33,6 @@ public class FactoryMenu extends NexoMenu {
 
     @Override
     public String getMenuName() {
-        // 🌟 FIX: Texto directo serializado para evitar errores en Bedrock y quitar getMessage
         return LegacyComponentSerializer.legacySection().serialize(NexoColor.parse("&#ff00ff🏭 <bold>FÁBRICA: " + factory.getFactoryType() + "</bold>"));
     }
 
@@ -51,15 +45,24 @@ public class FactoryMenu extends NexoMenu {
     public void setMenuItems() {
         setFillerGlass();
 
-        // 🌟 FIX: Obtenemos el ClaimManager usando el ServiceManager de la Arquitectura Enterprise
-        ProtectionStone stone = null;
-        ClaimManager claimManager = NexoAPI.getServices().get(ClaimManager.class).orElse(null);
+        // 🌟 FIX DESACOPLADO: Obtenemos la energía mediante reflexión ligera O(1)
+        String energyStatus = "&#8b0000Desconectada";
 
-        if (claimManager != null) {
-            stone = claimManager.getStoneById(factory.getStoneId());
+        if (Bukkit.getPluginManager().isPluginEnabled("NexoProtections")) {
+            try {
+                Object claimManager = me.nexo.core.user.NexoAPI.getServices()
+                        .get(Class.forName("me.nexo.protections.managers.ClaimManager"))
+                        .orElse(null);
+
+                if (claimManager != null) {
+                    Object stone = claimManager.getClass().getMethod("getStoneById", java.util.UUID.class).invoke(claimManager, factory.getStoneId());
+                    if (stone != null) {
+                        double energy = (double) stone.getClass().getMethod("getCurrentEnergy").invoke(stone);
+                        energyStatus = "&#00f5ff" + energy + " ⚡";
+                    }
+                }
+            } catch (Exception ignored) {}
         }
-
-        String energyStatus = (stone != null) ? "&#00f5ff" + stone.getCurrentEnergy() + " ⚡" : "&#8b0000Desconectada";
 
         // Ítem 1: Información de la Fábrica
         List<String> infoLoreRaw = List.of(
@@ -70,7 +73,7 @@ public class FactoryMenu extends NexoMenu {
                 "&#E6CCFFAutoridad: &#ff00ff" + Bukkit.getOfflinePlayer(factory.getOwnerId()).getName()
         );
         setItem(11, Material.REPEATER, "&#00f5ff📊 <bold>ESTADO DEL SISTEMA</bold>",
-                infoLoreRaw.stream().map(line -> LegacyComponentSerializer.legacySection().serialize(NexoColor.parse(line))).collect(Collectors.toList()));
+                infoLoreRaw.stream().map(line -> LegacyComponentSerializer.legacySection().serialize(NexoColor.parse(line))).toList());
 
         // Ítem 2: Catalizador / Mejora
         String catName = factory.getCatalystItem().equals("NONE") ? "&#8b0000Vacante" : "&#00f5ff" + factory.getCatalystItem();
@@ -80,7 +83,7 @@ public class FactoryMenu extends NexoMenu {
                 "&#FF5555(Sistema de inserción en desarrollo)"
         );
         setItem(13, Material.LODESTONE, "&#FFAA00✨ <bold>MÓDULO CATALIZADOR</bold>",
-                catLoreRaw.stream().map(line -> LegacyComponentSerializer.legacySection().serialize(NexoColor.parse(line))).collect(Collectors.toList()));
+                catLoreRaw.stream().map(line -> LegacyComponentSerializer.legacySection().serialize(NexoColor.parse(line))).toList());
 
         // Ítem 3: Salida de Producción
         String action = factory.getStoredOutput() > 0 ? "&#55FF55► Clic para Recolectar" : "&#FF5555[!] La bandeja está vacía";
@@ -90,7 +93,7 @@ public class FactoryMenu extends NexoMenu {
                 action
         );
         setItem(15, Material.CHEST, "&#55FF55📦 <bold>BANDEJA DE SALIDA</bold>",
-                outputLoreRaw.stream().map(line -> LegacyComponentSerializer.legacySection().serialize(NexoColor.parse(line))).collect(Collectors.toList()));
+                outputLoreRaw.stream().map(line -> LegacyComponentSerializer.legacySection().serialize(NexoColor.parse(line))).toList());
 
         // Ítem 4: Botón Lógico (Terminal)
         List<String> terminalLoreRaw = List.of(
@@ -100,7 +103,7 @@ public class FactoryMenu extends NexoMenu {
                 "&#00f5ff► Clic para abrir el compilador"
         );
         setItem(22, Material.COMMAND_BLOCK, "&#FF5555⚙ <bold>TERMINAL LÓGICA</bold>",
-                terminalLoreRaw.stream().map(line -> LegacyComponentSerializer.legacySection().serialize(NexoColor.parse(line))).collect(Collectors.toList()));
+                terminalLoreRaw.stream().map(line -> LegacyComponentSerializer.legacySection().serialize(NexoColor.parse(line))).toList());
     }
 
     private String getStatusColor(String status) {
@@ -114,47 +117,58 @@ public class FactoryMenu extends NexoMenu {
 
     @Override
     public void handleMenu(InventoryClickEvent event) {
-        int slot = event.getSlot();
+        event.setCancelled(true); // 🛑 BLOQUEO ABSOLUTO: Evita robo de paneles de cristal
+
+        int slot = event.getRawSlot();
 
         if (slot == 15) {
-            // Lógica de recolección de ítems
-            if (factory.getStoredOutput() <= 0) {
-                player.playSound(player.getLocation(), Sound.ENTITY_VILLAGER_NO, 1f, 1f);
-                return;
-            }
-            int amount = factory.getStoredOutput();
-            ItemStack reward = null;
+            // 🌟 BLOQUEO ATÓMICO (MUTEX): Evita Dupes si 2 jugadores abren la máquina a la vez
+            synchronized (factory) {
+                int totalAmount = factory.getStoredOutput();
 
-            // Integración con el plugin externo Nexo (Oraxen)
-            String nexoItemId = factory.getFactoryType() + "_OUTPUT";
-            try {
-                if (com.nexomc.nexo.api.NexoItems.itemFromId(nexoItemId) != null) {
-                    reward = com.nexomc.nexo.api.NexoItems.itemFromId(nexoItemId).build();
+                if (totalAmount <= 0) {
+                    player.playSound(player.getLocation(), Sound.ENTITY_VILLAGER_NO, 1f, 1f);
+                    return;
                 }
-            } catch (NoClassDefFoundError | Exception ignored) {}
 
-            if (reward == null) {
-                reward = new ItemStack(Material.IRON_INGOT);
+                // Limpiamos la base de datos inmediatamente ANTES de dar ítems (Previene dupes por crash)
+                factory.clearOutput();
+                plugin.getFactoryManager().saveFactoryStatusAsync(factory);
+
+                // Preparamos el ítem base
+                ItemStack baseReward = new ItemStack(Material.IRON_INGOT);
+                String nexoItemId = factory.getFactoryType() + "_OUTPUT";
+
+                try {
+                    if (com.nexomc.nexo.api.NexoItems.itemFromId(nexoItemId) != null) {
+                        baseReward = com.nexomc.nexo.api.NexoItems.itemFromId(nexoItemId).build();
+                    }
+                } catch (NoClassDefFoundError | Exception ignored) {}
+
+                // 🌟 ALGORITMO DE FRAGMENTACIÓN: Evita que Bukkit borre ítems por exceder 64
+                int remaining = totalAmount;
+
+                while (remaining > 0) {
+                    int chunk = Math.min(remaining, 64);
+                    ItemStack chunkItem = baseReward.clone();
+                    chunkItem.setAmount(chunk);
+
+                    HashMap<Integer, ItemStack> left = player.getInventory().addItem(chunkItem);
+                    if (!left.isEmpty()) {
+                        player.getWorld().dropItemNaturally(player.getLocation(), left.get(0));
+                    }
+                    remaining -= chunk;
+                }
+
+                player.playSound(player.getLocation(), Sound.ENTITY_PLAYER_LEVELUP, 1f, 2f);
+                CrossplayUtils.sendMessage(player, "&#55FF55[✓] Has extraído " + totalAmount + " unidades de la fábrica.");
+
+                // Refrescamos el menú para que vea que la bandeja está vacía
+                setMenuItems();
             }
-
-            reward.setAmount(amount);
-            factory.clearOutput();
-            plugin.getFactoryManager().saveFactoryStatusAsync(factory);
-
-            // Dar ítems de forma segura
-            HashMap<Integer, ItemStack> left = player.getInventory().addItem(reward);
-            if (!left.isEmpty()) {
-                player.getWorld().dropItemNaturally(player.getLocation(), left.get(0));
-            }
-
-            player.playSound(player.getLocation(), Sound.ENTITY_PLAYER_LEVELUP, 1f, 2f);
-
-            // 🌟 FIX: Mensaje directo sin getMessage
-            CrossplayUtils.sendMessage(player, "&#55FF55[✓] Has extraído " + amount + " unidades de la fábrica.");
-            player.closeInventory();
 
         } else if (slot == 22) {
-            // Abrimos el nuevo LogicMenu y pasamos los datos
+            // Abrimos el menú lógico (Terminal)
             new LogicMenu(player, plugin, factory).open();
         }
     }
